--- a/Resources/style.css
+++ b/Resources/style.css
@@ -122,6 +122,10 @@ header h2 {
     font-weight: bold;
 }
 
+section {
+    margin-bottom: 2%;
+}
+
 /* Main */
 
 main {
@@ -133,7 +137,7 @@ main {
 
 #about p {
     width: 85%;
-    margin: 2% auto;
+    margin: 2% auto 0;
 }
 
 /* Skills */
