--- a/Resources/style.css
+++ b/Resources/style.css
@@ -36,6 +36,9 @@ h3 {
 h4 {
     font-size: 2.5rem;
     margin: 0;
+    margin-bottom: 2%;
+    letter-spacing: 25px;
+    text-transform: uppercase;
 }
 
 h5 {
@@ -165,7 +168,7 @@ main {
 
 /* Projects */
 
-#projects ul {
+#project-list {
     list-style: none;
     padding: 0;
 }
@@ -192,6 +195,149 @@ main {
     display: block;
 }
 
+.project {
+    display: flex;
+    margin: 3%;
+    position: relative;
+    border-radius: 7px;
+    min-height: 350px;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.game {
+    display: flex;
+    margin: 1.5% .5%;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.description {
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+}
+
+.description p {
+    width: 75%;
+    align-self: center;
+}
+
+#fruit-title::before {
+    content: "FRUITPOCALYPSE";
+    text-shadow: 3px 3px 3px black;
+    position: absolute;
+    z-index: -1;
+}
+
+#fruit-title {
+    background-image: linear-gradient( 174deg, red, yellow);
+    -webkit-background-clip: text;
+    color: transparent;
+}
+
+#rpg-title::before {
+    content: "RPG LEVEL";
+    text-shadow: 3px 3px 3px black;
+    position: absolute;
+    z-index: -1;
+}
+
+#rpg-title {
+    background-image: linear-gradient( 148deg, #188e10, #0aa3e8);
+    -webkit-background-clip: text;
+    color: transparent;
+}
+
+#zombie-title::before {
+    content: "ZOMBIE RUNNER";
+    text-shadow: 3px 3px 3px black;
+    position: absolute;
+    z-index: -1;
+}
+
+#zombie-title {
+    background-image: linear-gradient( 137deg, #34572a, grey);
+    -webkit-background-clip: text;
+    color: transparent;
+}
+
+#argon-title::before {
+    content: "ARGON ASSAULT";
+    text-shadow: 3px 3px 3px black;
+    position: absolute;
+    z-index: -1;
+}
+
+#argon-title {
+    background-image: linear-gradient( 182deg, #980b0b, #9a5c1d);
+    -webkit-background-clip: text;
+    color: transparent;
+}
+
+.summary-container {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.skills-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.skills-list {
+    list-style: disc;
+    text-align: left;
+}
+
+.skills-list li {
+    margin-bottom: 4%;
+}
+
+.skill-subtitle {
+    padding-inline-start: 40px;
+    height: auto;
+    margin-bottom: 5%;
+    text-align: left;
+}
+
+.game-footer {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.game-footer p {
+    margin: 0;
+    margin-bottom: 1.5%;
+}
+
+.enlarge-text {
+    width: 35%;
+}
+
+.git-link {
+    width: 60%;
+}
+
+#rpg,
+#argon {
+    margin-right: 1%;
+    margin-left: 5%;
+    background-image: linear-gradient(to left, rgba(45, 49, 66, .7), rgba(45, 49, 66, .2));
+}
+
+#fruitpocalypse,
+#zombie {
+    margin-left: 1%;
+    margin-right: 5%;
+    background-image: linear-gradient(to right, rgba(45, 49, 66, .7), rgba(45, 49, 66, .2));
+}
+
+#rpg .game,
+#argon .game {
+    flex-direction: row-reverse;
+}
+
 /* Image Enlargement Overlay */
 
 #fruit-overlay, #rpg-overlay, #argon-overlay, #zombie-overlay {
@@ -206,25 +352,25 @@ main {
     transition: opacity .5s ease-in-out;
 }
 
-#fruit-overlay:target, #rpg-overlay:target, #argon-overlay:target, #zombie-overlay:target {
-    opacity: 1;
-    z-index: 200;
-}
+    #fruit-overlay:target, #rpg-overlay:target, #argon-overlay:target, #zombie-overlay:target {
+        opacity: 1;
+        z-index: 200;
+    }
 
-#fruit-overlay img, #rpg-overlay img, #argon-overlay img, #zombie-overlay img {
-    margin: auto;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    max-height: 0%;
-    max-width: 0%;
-    border: 3px solid white;
-    box-shadow: 0px 0px 8px rgba(0,0,0,.3);
-    box-sizing: border-box;
-    transition: .5s ease-in-out;
-}
+    #fruit-overlay img, #rpg-overlay img, #argon-overlay img, #zombie-overlay img {
+        margin: auto;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        max-height: 0%;
+        max-width: 0%;
+        border: 3px solid white;
+        box-shadow: 0px 0px 8px rgba(0,0,0,.3);
+        box-sizing: border-box;
+        transition: .5s ease-in-out;
+    }
 
     #fruit-overlay:target img, #rpg-overlay:target img, #argon-overlay:target img, #zombie-overlay:target img {
         max-width: 90vw;
@@ -274,72 +420,6 @@ main {
         top: 10px;
         transform: rotate(-45deg);
     }
-
-/* Back to projects */
-
-.project {
-    display: flex;
-    margin: 3%;
-    position: relative;
-    border-radius: 7px;
-    min-height: 350px;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-.game {
-    display: flex;
-    margin: 1.5% .5%;
-    align-items: center;
-    justify-content: space-evenly;
-}
-
-.description {
-    display: flex;
-    flex-direction: column;
-    width: 60%;
-}
-
-.description p {
-    text-align: center;
-}
-
-.game-footer {
-    display: flex;
-    justify-content: space-evenly;
-}
-
-.game-footer p {
-    margin: 0;
-    margin-bottom: 1.5%;
-}
-
-.enlarge-text {
-    width: 35%;
-}
-
-.git-link {
-    width: 60%;
-}
-
-#rpg,
-#argon {
-    margin-right: 1%;
-    margin-left: 5%;
-    background-image: linear-gradient(to left, rgba(45, 49, 66, .7), rgba(45, 49, 66, .2));
-}
-
-#fruitpocalypse,
-#zombie {
-    margin-left: 1%;
-    margin-right: 5%;
-    background-image: linear-gradient(to right, rgba(45, 49, 66, .7), rgba(45, 49, 66, .2));
-}
-
-#rpg .game,
-#argon .game {
-    flex-direction: row-reverse;
-}
 
 /* Footer */
 footer {
